Micro-service-playlist/database/service.yaml
# Service pour PlayListService
apiVersion: v1
kind: Service
metadata:
  name: playlistservicedatabase
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1437
      targetPort: 1437
  type: ClusterIP
